<resources>
    <string name="app_name">MaReu</string>

    <string name="delete_neighbour">Supprimer la reunion</string>
    <string name="name">Nom de la reunion</string>
    <string name="location">Lieu de la reunion</string>
    <string name="subject">Sujet de la reunion</string>
    <string name="participants">Saisir le mail d\'un nouveau participant</string>
    <string name="hour">Entrer l\'heure de la reunion</string>
    <string name="save">Enregistrer la reunion</string>
    <string name="date">Entrez la date de la reunion</string>
    <string name="no_participants_saved">Il n\'y a aucun participants d\'enregistré</string>

    <!-- content descritption strings-->
    <string name="remove_filters">Retirer les filtres</string>
    <string name="filter_by_date">Filtrer par Date</string>
    <string name="filter_by_location">Filtrer par lieu</string>
    <string name="filter_meetings">Filtrer les réunions</string>
    <string name="add_meeting">Ajouter une reunion</string>
    <string name="delete_meeting">Supprimer une reunion</string>
    <string name="add_participants">Ajouter un participant</string>
    <string name="delete_participants">Supprimer un participant</string>
    <string name="select_date">Choissisez la date de la reunion</string>
    <string name="select_time">Choissisez l\'heure de la reunion</string>
    <string name="nouvelle_reunion">NOUVELLE REUNION</string>


    <string-array name="rooms">
        <item>Salle 1</item>
        <item>Salle 2</item>
        <item>Salle 3</item>
        <item>Salle 4</item>
        <item>Salle 5</item>
        <item>Salle 6</item>
        <item>Salle 7</item>
        <item>Salle 8</item>
        <item>Salle 9</item>
        <item>Salle 10</item>
    </string-array>
</resources>